tests/accept/fragment02tuple.lc
clear = FrameBuffer $ ColorImage @1 $ V4 1 0 0 0.5

triangleRasterCtx = TriangleCtx CullNone PolygonFill NoOffset LastVertex
colorFragmentCtx = AccumulationContext (ColorOp NoBlending (V4 True True True True))

rasterizeWith = Rasterize
triangles = triangleRasterCtx

quadVertexStream = Fetch "quad" Triangles (Attribute "position" :: Vec 4 Float)

transform s f =  Transform (\v -> VertexOut v 1 () (f v)) s

mapFragments s fs = Accumulate colorFragmentCtx PassAll (\a -> FragmentOut $ fs a) s clear

render f = quadVertexStream                 -- id vertices
    `transform`    (\a -> (Smooth a,Smooth a))
     &             rasterizeWith triangles  -- rasterize
    `mapFragments` f
     &             ScreenOut                --  draw into screen

main = render $ \(a,b) -> a `PrimAdd` b
